Included the build page in the documentation page.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <h2>
 <a id="game-modules" class="anchor" href="#game-modules" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Game Modules</h2>
-<iframe src="https://github.com/jasonbdly/Web_Battleship/blob/master/build/index.html"></iframe>
+<iframe src="build/index.html"></iframe>
 <p>The game logic is divided into three central modules. 
 Look for any function definitions with an uppercase name to find them in the code.
 They are the following:
