Update display of game example.

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
           <h1>
 <a id="web-battleship-prototype-game" class="anchor" href="#web-battleship-prototype-game" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Web Battleship Prototype Game</h1>
 
-<h2>
-<a id="game-modules" class="anchor" href="#game-modules" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Game Modules</h2>
-<iframe src="build/index.html" style="width: 500px; height: 500px;"></iframe>
+<h2><a id="game-example" class="anchor" href="#game-example" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Game Example</h2>
+<iframe src="build/index.html" style="width: 500px; height: 700px;"></iframe>
+
+<h2><a id="game-modules" class="anchor" href="#game-modules" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Game Modules</h2>
 <p>The game logic is divided into three central modules. 
 Look for any function definitions with an uppercase name to find them in the code.
 They are the following:
